# drillgame

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  flake.nix  taplo.toml
.config/: nextest.toml
assets/ui/: README.md
