[workspace]
members  = ["packages/game"]
resolver = "2"

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
readme     = "README.md"
repository = "https://github.com/BSteffaniak/drillgame"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
quinn = { version = "0.11.9", default-features = false, features = [
    "rustls",
    "ring",
    "runtime-tokio",
] }
raylib = { version = "6.0.0", default-features = false, features = [
    "SUPPORT_MODULE_RSHAPES",
    "SUPPORT_MODULE_RTEXT",
    "SUPPORT_MODULE_RTEXTURES",
    "SUPPORT_MODULE_RAUDIO",
    "SUPPORT_FILEFORMAT_WAV",
] }
rcgen = { version = "0.13.2", default-features = false, features = [
    "crypto",
    "ring",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { version = "1.0.150", default-features = false, features = [
    "std",
] }
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
